Add second example for the ImageEffectRenderer

--- a/example/example2.html
+++ b/example/example2.html
@@ -36,8 +36,9 @@
 </head>
 <body>
 
-<h2>Wolfenstein 3D by Reinder</h2>
-<div class="image-effect"></div>
+<h2>Image Transition <small>(Drag the slider)</small></h2>
+<div class="image-effect" data-image></div>
+<input type="range" min="0" max="70" value="0" class="js-progress" />
 
 <script src="./bundle.js"></script>
 </body>
