--- a/example/index.html
+++ b/example/index.html
@@ -5,33 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>ImageEffectRenderer example</title>
   <style>
-    html,
-    body {
-      height: 100%;
-      background: #111;
-    }
-
-    body {
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      margin: 0;
-      color: #fff;
-    }
-
-    .image-effect {
-      width: 600px;
-      height: 400px;
-      outline: 10px solid rgba(255,255,255,0.05);
-    }
   </style>
 </head>
 <body>
 
-<h2>Wolfenstein 3D by Reinder</h2>
-<div class="image-effect"></div>
+<a href="./example1.html">Example 1 - Wolfenstein 3D shader</a><br>
+<a href="./example2.html">Example 2 - Image transition shader</a>
 
 <script src="./bundle.js"></script>
 </body>
