Add panorama example

--- a/example/index.html
+++ b/example/index.html
@@ -10,7 +10,8 @@
 <body>
 
 <a href="./example1.html">Example 1 - Wolfenstein 3D shader</a><br>
-<a href="./example2.html">Example 2 - Image transition shader</a>
+<a href="./example2.html">Example 2 - Image transition shader</a><br>
+<a href="./example3.html">Example 3 - Panorama</a>
 
 <script src="./bundle.js"></script>
 </body>
