Add new glitch example

--- a/example/index.html
+++ b/example/index.html
@@ -11,7 +11,8 @@
 
 <a href="./example1.html">Example 1 - Wolfenstein 3D shader</a><br>
 <a href="./example2.html">Example 2 - Image transition shader</a><br>
-<a href="./example3.html">Example 3 - Panorama</a>
+<a href="./example3.html">Example 3 - Panorama</a><br>
+<a href="./example4.html">Example 4 - Infinite Image Effect</a>
 
 <script src="./bundle.js"></script>
 </body>
