Update example, add GSAP and typescript deps for example

--- a/example/example2.html
+++ b/example/example2.html
@@ -39,6 +39,7 @@
 <h2>Image Transition <small>(Drag the slider)</small></h2>
 <div class="image-effect" data-image></div>
 <input type="range" min="0" max="70" value="0" class="js-progress" />
+<button class="js-play">Play</button>
 
 <script src="./bundle.js"></script>
 </body>
