Add panorama play/pause methods. Update example

--- a/example/example3.html
+++ b/example/example3.html
@@ -22,16 +22,29 @@
     }
 
     .panorama {
+      text-align: center;
+    }
+
+    .canvas {
       width: 600px;
       height: 400px;
       outline: 10px solid rgba(255,255,255,0.05);
+    }
+
+    nav {
+      padding-top: 30px;
     }
   </style>
 </head>
 <body>
 
 <h2>Panorama</h2>
-<div class="panorama"></div>
+<div class="panorama">
+  <div class="canvas"></div>
+  <nav>
+    <button class="js-play">Play</button><button class="js-stop">Stop</button>
+  </nav>
+</div>
 
 <script src="./bundle.js"></script>
 </body>
