Split up example code for better readability

--- a/example/example1.html
+++ b/example/example1.html
@@ -37,7 +37,7 @@
 <body>
 
 <h2>Wolfenstein 3D by Reinder</h2>
-<div class="image-effect"></div>
+<div class="image-effect" data-className="wolfenstein"></div>
 
 <script src="./bundle.js"></script>
 </body>
