--- a/example/example2.html
+++ b/example/example2.html
@@ -37,7 +37,7 @@
 <body>
 
 <h2>Image Transition <small>(Drag the slider)</small></h2>
-<div class="image-effect" data-image></div>
+<div class="image-effect" data-className="transition"></div>
 <input type="range" min="0" max="70" value="0" class="js-progress" />
 <button class="js-play">Play</button>
 
