--- a/example/example4.html
+++ b/example/example4.html
@@ -31,7 +31,7 @@
 <body>
 
 <h2>Continuous Effect</h2>
-<div class="image-effect" data-infinite></div>
+<div class="image-effect" data-className="glitch"></div>
 
 <script src="./bundle.js"></script>
 </body>
