--- a/example/index.html
+++ b/example/index.html
@@ -13,6 +13,7 @@
 <a href="./example2.html">Example 2 - Image transition shader</a><br>
 <a href="./example3.html">Example 3 - Panorama</a><br>
 <a href="./example4.html">Example 4 - Infinite Image Effect</a>
+<a href="./example5.html">Example 8 - Panorama Video</a>
 
 <script src="./bundle.js"></script>
 </body>
