- Added buffers to ImageEffectRenderer - Added a little bit of barrel distortion to the PanoramaRenderer

--- a/example/index.html
+++ b/example/index.html
@@ -12,8 +12,8 @@
 <a href="./example1.html">Example 1 - Wolfenstein 3D shader</a><br>
 <a href="./example2.html">Example 2 - Image transition shader</a><br>
 <a href="./example3.html">Example 3 - Panorama</a><br>
-<a href="./example4.html">Example 4 - Infinite Image Effect</a>
-<a href="./example5.html">Example 8 - Panorama Video</a>
+<a href="./example4.html">Example 4 - Infinite Image Effect</a><br>
+<a href="./example5.html">Example 5 - Panorama Video</a>
 
 <script src="./bundle.js"></script>
 </body>
