new example using buffers

--- a/example/index.html
+++ b/example/index.html
@@ -13,7 +13,8 @@
 <a href="./example2.html">Example 2 - Image transition shader</a><br>
 <a href="./example3.html">Example 3 - Panorama</a><br>
 <a href="./example4.html">Example 4 - Infinite Image Effect</a><br>
-<a href="./example5.html">Example 5 - Panorama Video</a>
+<a href="./example5.html">Example 5 - Panorama Video</a><br>
+<a href="./example6.html">Example 6 - Flow Buffer</a><br>
 
 <script src="./bundle.js"></script>
 </body>
