one shared WebGL context

--- a/example/index.html
+++ b/example/index.html
@@ -15,6 +15,7 @@
 <a href="./example4.html">Example 4 - Infinite Image Effect</a><br>
 <a href="./example5.html">Example 5 - Panorama Video</a><br>
 <a href="./example6.html">Example 6 - Flow Buffer</a><br>
+<a href="./example7.html">Example 7 - Multiple Instances</a><br>
 
 <script src="./bundle.js"></script>
 </body>
