- Removed Panorama Renderer - ImageEffectRenderers can have their own WebGLContext if needed

--- a/example/example3.html
+++ b/example/example3.html
@@ -21,30 +21,17 @@
       color: #fff;
     }
 
-    .panorama {
-      text-align: center;
-    }
-
-    .canvas {
+    .image-effect {
       width: 600px;
       height: 400px;
       outline: 10px solid rgba(255,255,255,0.05);
-    }
-
-    nav {
-      padding-top: 30px;
     }
   </style>
 </head>
 <body>
 
-<h2>Panorama</h2>
-<div class="panorama" data-className="panorama">
-  <div class="canvas"></div>
-  <nav>
-    <button class="js-play">Play</button><button class="js-stop">Stop</button>
-  </nav>
-</div>
+<h2>Continuous Effect</h2>
+<div class="image-effect" data-className="glitch"></div>
 
 <script src="./bundle.js"></script>
 </body>
