--- a/example/example4.html
+++ b/example/example4.html
@@ -26,12 +26,18 @@
       height: 400px;
       outline: 10px solid rgba(255,255,255,0.05);
     }
+
+    input {
+      width: 50%;
+      max-width: 600px;
+      margin-top: 4em;
+    }
   </style>
 </head>
 <body>
 
-<h2>Continuous Effect</h2>
-<div class="image-effect" data-className="glitch"></div>
+<h2>Flow Effect <small>(Click and drag on the image)</small></h2>
+<div class="image-effect" data-className="flow"></div>
 
 <script src="./bundle.js"></script>
 </body>
