--- a/example/example5.html
+++ b/example/example5.html
@@ -9,6 +9,7 @@
     body {
       height: 100%;
       background: #111;
+      overflow: hidden;
     }
 
     body {
@@ -21,39 +22,19 @@
       color: #fff;
     }
 
-    .panorama {
-      text-align: center;
-    }
-
-    .canvas {
-      width: 600px;
-      height: 400px;
-      outline: 10px solid rgba(255,255,255,0.05);
-    }
-
-    .video {
-      position: fixed;
-      right: 0;
-      bottom: 0;
-      width: 25%;
-    }
-
-    nav {
-      padding-top: 30px;
+    .image-effect {
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
 <body>
 
-<h2>Panorama Video</h2>
-<div class="panorama" data-className="360-video">
-  <div class="canvas"></div>
-  <nav>
-    <button class="js-play">Play</button><button class="js-stop">Stop</button>
-  </nav>
-</div>
-
-<video class="video js-video" src="static/360-video.mp4" muted loop />
+<h2>Multiple Instances</h2>
+<div class="image-effect" data-className="multiple"></div>
 
 <script src="./bundle.js"></script>
 </body>
