--- a/example/index.html
+++ b/example/index.html
@@ -14,6 +14,7 @@
 <a href="./example3.html">Example 3 - Infinite Image Effect</a><br>
 <a href="./example4.html">Example 4 - Flow Buffer</a><br>
 <a href="./example5.html">Example 5 - Multiple Instances</a><br>
+<a href="./example6.html">Example 6 - Create/Destruct Test</a><br>
 
 <script src="./bundle.js"></script>
 </body>
