Small fixes + fluid example
Small fixes + fluid example

--- a/example/index.html
+++ b/example/index.html
@@ -15,6 +15,7 @@
 <a href="./example4.html">Example 4 - Flow Buffer</a><br>
 <a href="./example5.html">Example 5 - Multiple Instances</a><br>
 <a href="./example6.html">Example 6 - Create/Destruct Test</a><br>
+<a href="./example7.html">Example 7 - Simple Fluid Dynamics</a><br>
 
 <script src="./bundle.js"></script>
 </body>
