Added a wave-distortion example

--- a/example/index.html
+++ b/example/index.html
@@ -16,6 +16,7 @@
 <a href="./example5.html">Example 5 - Multiple Instances</a><br>
 <a href="./example6.html">Example 6 - Create/Destruct Test</a><br>
 <a href="./example7.html">Example 7 - Simple Fluid Dynamics</a><br>
+<a href="./example8.html">Example 8 - Wave</a><br>
 
 <script src="./bundle.js"></script>
 </body>
