Use vite vs webpack

--- a/example/index.html
+++ b/example/index.html
@@ -35,6 +35,6 @@
   <div class="grid-item"></div>
   <div class="grid-item"></div>
   <div class="grid-item"></div>
-  <script src="bundle.js"></script>
+  <script type="module" src="src/index.js"></script>
 </body>
 </html>
